[tool.poetry]
name = "echo-server"
version = "0.1.0"
description = ""
authors = ["Rickyxrc <rickyxrc@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
rich = "^13.7.0"
prompt-toolkit = "^3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
